--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
-.flex, .flex-col, .flex-group, .flex-grid {
+.rating, .flex, .flex-col, .flex-group, .flex-grid {
   display: flex;
 }
 
-.rating__container, .rating, .testimonial, .card, .grid, .macro-grid, .grid-stack, .even-cols, .auto-grid {
+.product__info, .rating__container, .testimonial, .card, .grid, .macro-grid, .grid-stack, .even-cols, .auto-grid {
   display: grid;
 }
 
@@ -23,7 +23,7 @@ a {
 .h3,
 .h4 {
   font-weight: var(--fw-heading-main);
-  line-height: 1.1;
+  line-height: 0.8;
   color: hsl(var(--c-heading));
 }
 
@@ -54,7 +54,7 @@ a {
   --bgc-rating: 300 24% 96%;
   --ff-body: "League Spartan", sans-serif;
   --fs-body: 0.9375rem;
-  --fs-h1: 2.5rem;
+  --fs-h1: clamp(2.5rem, 5svw + 1.25rem, 4rem);
   --fw-body: 400;
   --fw-heading-main: 700;
   --fw-heading-sub: 500;
@@ -493,17 +493,17 @@ h6 {
 }
 
 .container {
-  --_max-width: var(--max-width, 60rem);
-  --_padding-inline: var(--padding-inline, 2 * 1.5rem);
+  --_max-width: var(--max-width, 50rem);
+  --_padding-inline: var(--padding-inline, 2 * clamp(1.5rem, 5svw, 3rem));
   max-width: min(100% - var(--_padding-inline), var(--_max-width));
   min-width: min(100% - var(--_padding-inline), var(--_max-width));
   margin-inline: auto;
 }
 .container--small {
-  --max-width: 40rem;
+  --max-width: 30rem;
 }
 .container--large {
-  --max-width: 80rem;
+  --max-width: 70rem;
 }
 
 .block {
@@ -2095,6 +2095,10 @@ h6 {
   letter-spacing: 0.5em;
 }
 
+.text-max-width {
+  max-width: 50ch;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2137,37 +2141,89 @@ body {
 }
 @media (min-width: 768px) {
   .product__info {
-    -moz-text-align-last: left;
-         text-align-last: left;
+    align-items: center;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+    text-align: left;
+  }
+}
+
+.info__text {
+  max-width: 50ch;
+  margin: auto;
+  margin-top: 2em;
+}
+@media (min-width: 768px) {
+  .info__text {
+    margin-inline: 0;
   }
 }
 
 .rating__container {
   gap: 1rem;
+  margin-top: 2rem;
+}
+@media (min-width: 768px) {
+  .rating__container {
+    margin-top: 0;
+  }
 }
 
 .rating {
-  justify-items: center;
-  gap: 0.5rem;
-  padding: 1rem;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem 2rem;
   border-radius: 0.5rem;
   font-weight: var(--fw-heading-main);
   color: hsl(var(--c-rating));
   background-color: hsl(var(--bgc-rating));
 }
+@media (min-width: 768px) {
+  .rating {
+    flex-direction: row;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .rating:nth-child(2) {
+    justify-self: center;
+  }
+  .rating:nth-child(3) {
+    justify-self: right;
+  }
+}
 
 .testimonial {
+  --block-spacing-card: 2.5svh;
   gap: 1rem;
+  margin-top: 4rem;
+}
+@media (min-width: 768px) {
+  .testimonial {
+    row-gap: revert;
+    grid-template-columns: [card-left-start] 1fr [card-left-end card-center-start] 1fr [card-center-end card-right-start] 1fr [card-right-end];
+    grid-template-rows: [card-left-start] var(--block-spacing-card) [card-center-start] var(--block-spacing-card) [card-right-start] 1fr [card-left-end] var(--block-spacing-card) [card-center-end] var(--block-spacing-card) [card-right-end];
+  }
+  .testimonial > :nth-child(1) {
+    grid-area: card-left;
+  }
+  .testimonial > :nth-child(2) {
+    grid-area: card-center;
+  }
+  .testimonial > :nth-child(3) {
+    grid-area: card-right;
+  }
 }
 
 .card {
+  align-items: center;
   gap: 1rem;
   grid-template-columns: [img-start text-start] auto [img-end author-start] 1fr [author-end text-end];
   grid-template-rows: [img-start author-start] auto [img-end author-end text-start] 1fr [text-end];
 }
 .card img {
   grid-area: img;
-  width: 3rem;
+  width: 2.5rem;
   border-radius: 50%;
 }
 .card > div {
