--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,10 +20,26 @@ body {
 }
 
 .product__info {
+    @include grid;
+
     text-align: center;
 
     @include min-query("s") {
-        text-align-last: left;
+        align-items: center;
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+
+        text-align: left;
+    }
+}
+
+.info__text {
+    max-width: 50ch;
+    margin: auto;
+    margin-top: 2em;
+    
+    @include min-query("s") {
+        margin-inline: 0;
     }
 }
 
@@ -31,36 +47,80 @@ body {
     @include grid;
 
     gap: 1rem;
+    margin-top: 2rem;
+
+    @include min-query("s") {
+        margin-top: 0;
+    }
 }
 
 .rating {
-    @include grid(center, null, 0.5rem); 
+    @include flex(column, null, center, 1rem);
 
-    padding: 1rem;
+    padding: 1rem 2rem;
     border-radius: 0.5rem;
     font: {
         weight: var(--fw-heading-main);
     }
     color: hsl(var(--c-rating));
     background-color: hsl(var(--bgc-rating));
+
+    @include min-query("s") {
+        flex-direction: row;
+        width: max-content;
+
+        &:nth-child(2) {
+            justify-self: center;
+        }
+
+        &:nth-child(3) {
+            justify-self: right;
+        }
+    }
 }
 
 .testimonial {
+    --block-spacing-card: 2.5svh;
+
     @include grid;
 
     gap: 1rem;
+    margin-top: 4rem;
+
+    @include min-query("s") {
+        row-gap: revert;
+        grid-template-columns: [card-left-start] 1fr [card-left-end 
+                               card-center-start] 1fr [card-center-end 
+                               card-right-start] 1fr [card-right-end];
+        grid-template-rows: [card-left-start] var(--block-spacing-card)
+                            [card-center-start] var(--block-spacing-card)
+                            [card-right-start] 1fr [card-left-end]
+                            var(--block-spacing-card) [card-center-end]
+                            var(--block-spacing-card) [card-right-end];
+
+        > :nth-child(1) {
+            grid-area: card-left;
+        }
+
+        > :nth-child(2) {
+            grid-area: card-center;
+        }
+
+        > :nth-child(3) {
+            grid-area: card-right;
+        }
+    }
 }
 
 .card {
-    @include grid;
+    @include grid(null, center, 1rem);
  
-    gap: 1rem;
     grid-template-columns: [img-start text-start] auto [img-end author-start] 1fr [author-end text-end];
     grid-template-rows: [img-start author-start] auto [img-end author-end text-start] 1fr [text-end];
 
     img {
         grid-area: img;
-        width: 3rem;
+        width: 2.5rem;
         border-radius: 50%;
     }
 
